--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@onsvisual/svelte-charts": "^0.2.11",
 		"@onsvisual/svelte-maps": "^1.1.6",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"ckmeans": "^2.1.0",
 		"eslint": "^8.28.0",
